// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#render hides the summary when missing 1`] = `
<Styled(div)>
  <Styled(div)>
    <Styled(img)
      alt="Bill Icon"
      src={null}
    />
    <p>
      HB1234
       - Updated 
      Invalid Date
    </p>
  </Styled(div)>
  <h3>
    Foo
  </h3>
  <Styled(div) />
  <p />
  <Button
    isSmall={true}
    to="/bill/1234"
  >
    More Info
  </Button>
</Styled(div)>
`;

exports[`#render renders properly 1`] = `
<Styled(div)>
  <Styled(div)>
    <Styled(img)
      alt="Bill Icon"
      src={null}
    />
    <p>
      HB1234
       - Updated 
      Invalid Date
    </p>
  </Styled(div)>
  <h3>
    Foo
  </h3>
  <Styled(div) />
  <p>
    A bill, fantastic
  </p>
  <Button
    isSmall={true}
    to="/bill/1234"
  >
    More Info
  </Button>
</Styled(div)>
`;
